--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "JWTSecurityKey": "СВЕРХ СЕКРЕТНЫЙ КЛЮЧ. ЕСЛИ ТЫ ЭТО ЧИТАЕШЬ, ЗНАЧИТ ТЫ *****",
+  "JWTExpiryInDays": 2,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApiRecipesDatabase": "Host=myserver;Username=burnfeniks_egor;Password=SqhkpHuu;Database=mydatabase"
+  }
 }
