Наброски для поискового движка. Дописал репозитории

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
+  "JWTSecurityKey": "",
+  "JWTExpiryInDays": 2,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApiRecipesDatabase": ""
   }
 }
