--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "JWTSecurityKey": "СВЕРХ СЕКРЕТНЫЙ КЛЮЧ. ЕСЛИ ТЫ ЭТО ЧИТАЕШЬ, ЗНАЧИТ ТЫ *****",
+  "JWTSecurityKey": "",
   "JWTExpiryInDays": 2,
   "Logging": {
     "LogLevel": {
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiRecipesDatabase": "Host=myserver;Username=burnfeniks_egor;Password=SqhkpHuu;Database=mydatabase"
+    "WebApiRecipesDatabase": ""
   }
 }
