Добавил систему рейтинга и миграции

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "JWTSecurityKey": "",
-  "JWTExpiryInDays": 2,
+  "JWTIssuer": "https://localhost:5001",
+  "JWTExpiryDays": 2,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiRecipesDatabase": ""
+    "WebApiPostgreSQLDatabase": ""
   }
 }
