--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "JWTSecurityKey": "",
-  "JWTExpiryInDays": 2,
+  "JWTSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+  "JWTIssuer": "https://localhost:5001",
+  "JWTExpiryDays": 2,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiRecipesDatabase": ""
+    "WebApiPostgreSQLDatabase": "Host=pro15.easy4.team;Username=burnfeniks_egor;Password=SqhkpHuu;Database=burnfeniks_egor"
   }
 }
