--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "JWTSecurityKey": "RANDOM_KEY_MUST_NOT_BE_SHARED",
+  "JWTSecurityKey": "",
   "JWTIssuer": "https://localhost:5001",
   "JWTExpiryDays": 2,
   "Logging": {
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiPostgreSQLDatabase": "Host=pro15.easy4.team;Username=burnfeniks_egor;Password=SqhkpHuu;Database=burnfeniks_egor"
+    "WebApiPostgreSQLDatabase": ""
   }
 }
